test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_0.k
schema Data(pkg.Base.Base):
    name: str
